<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/permissionNeverAskAgainAlertDialogParentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorAccent"
        android:gravity="center">

        <ImageView
            android:id="@+id/permissionIconImageView"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/permission_ic_camera"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/permissionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/camera_permission"
            android:textAppearance="@style/BoldFont20"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/explainWhyThisRequireTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/permission_never_ask_again_alert_dialog_message"
            android:textAppearance="@style/RegularFont10"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/closeButtonTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@android:color/transparent"
            android:text="@string/close"
            android:textAppearance="@style/BoldFont20"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/settingButtonTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@android:color/transparent"
            android:text="@string/settings"
            android:textAppearance="@style/BoldFont20"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>